# crypto-msgflow

./: .gitignore  GEO_COLLECTORS.md  README.md  design.md  pyproject.toml  spec.md
.claude/skills/news-triage/: SKILL.md
.claude/skills/priced-in-check/: SKILL.md
.claude/skills/research-db/: SKILL.md
.claude/skills/verdict-write/: SKILL.md
collectors/: __init__.py  alerts.py  base.py  bea.py  bigdata.py  bls.py  config.py  dbpath.py  dedup.py  events.py  fomc.py  fred.py  fulltext.py  gdelt.py  ofac_addresses.py  okx_oi.py  okx_oi_1d.py  okx_oi_1h.py  okx_price.py  polymarket.py  rate_limit.py  rss.py  tga.py  timeutil.py  x_kol.py
config/: example.toml
deploy/: README.md  msgflow-listing.service
scripts/: backfill_verdicts.py  create_verdict.py  crontab.example  init_db.py
tests/: test_dedup.py
tests/smoke/: test_health.py
watchers/: __init__.py  listing_alert.py
