[project]
name = "crypto-msgflow"
version = "0.1.0"
description = "Crypto message flow collector - append-only data pipeline"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "httpx>=0.27.0",
    "curl-cffi>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "feedparser>=6.0.0",
    "python-telegram-bot>=21.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]
# GDELT collector only. Heavy SDK; keep it out of the base install.
gdelt = [
    "google-cloud-bigquery>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
